structure changed + sign up fixed
